--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+.full-width {
+    width: 100% !important;
+    margin: 4px;
+  }
+
+  .toggle-mode {
+    margin-top: 16px;
+    display: inline-block;
+    text-align: center;
+    color: #3f51b5;
+    font-weight: 500;
+    cursor: pointer;
+    text-decoration: underline;
+    transition: color 0.3s ease;
+  }
+  
+  .toggle-mode:hover {
+    color: #303f9f;
+  }
