--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,34 @@
-<mat-toolbar color="primary" class="app-toolbar">
-  <span class="app-title" routerLink="/rents">🏠 Rent Management</span>
-  <nav>
-    @if(isLoggedIn) {
-    <a mat-button routerLink="/rents" class="ml-4">Rent List</a>
-    <a mat-button routerLink="/property-types">Manage Property Types</a>
-    <a mat-button (click)="logout()" >Logout</a>
-    } @else {
-    <a mat-button routerLink="/login" >Login</a>
-    <a mat-button routerLink="/register">Register</a>
-    }
+<!-- 📁 navbar.component.html -->
+<mat-toolbar color="primary" class="mat-elevation-z4">
+  <button mat-icon-button (click)="sidenav.toggle()" class="mobile-toggle">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span class="logo">Rent Manager</span>
+
+  <span class="spacer"></span>
+
+  <!-- Desktop Links -->
+  <nav class="desktop-links">
+    <a mat-button routerLink="/rents">Rents</a>
+    <a mat-button routerLink="/property-types">Property Types</a>
+    <a mat-button routerLink="/login" *ngIf="!isLoggedIn">Login</a>
+    <a mat-button (click)="logout()" *ngIf="isLoggedIn">Logout</a>
   </nav>
 </mat-toolbar>
 
-<router-outlet></router-outlet>
+<!-- Right Sidenav for Mobile -->
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #sidenav mode="over" position="end" class="mobile-sidenav">
+    <mat-nav-list>
+      <a mat-list-item routerLink="/rents" (click)="sidenav.close()">Rents</a>
+      <a mat-list-item routerLink="/property-types" (click)="sidenav.close()">Property Types</a>
+      <a mat-list-item routerLink="/login" (click)="sidenav.close()" *ngIf="!isLoggedIn">Login</a>
+      <a mat-list-item (click)="logout(); sidenav.close()" *ngIf="isLoggedIn">Logout</a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <!-- Main app content -->
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
