feat: add add rent button to mobile view for easier rent entry

--- a/src/app/components/rent-list/rent-list.component.html
+++ b/src/app/components/rent-list/rent-list.component.html
@@ -130,4 +130,7 @@
       <mat-icon>delete</mat-icon>
     </button>
   </div>
+  <button mat-fab color="primary" class="add-button" (click)="addRent()">
+    <mat-icon>add</mat-icon>
+  </button>
 </div>
