--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,7 @@
 
   <!-- Main app content -->
   <mat-sidenav-content>
+    <app-spinner />
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
