--- a/src/app/components/rent-dialog/rent-dialog.component.html
+++ b/src/app/components/rent-dialog/rent-dialog.component.html
@@ -29,7 +29,7 @@
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Year Paid For</mat-label>
-      <input matInput type="number" formControlName="yearPaidFor" required />
+      <input matInput formControlName="yearPaidFor" required />
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
