--- a/src/app/components/rent-list/rent-list.component.html
+++ b/src/app/components/rent-list/rent-list.component.html
@@ -9,8 +9,12 @@
     <mat-label>Search</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Filter by name or month">
   </mat-form-field>
-
-
+  <div class="d-flex justify-content-between align-items-center m-3">
+    <button class="btn btn-success" (click)="downloadExcel()">
+      <i class="bi bi-download"></i>  Export to Excel
+    </button>
+  </div>
+    
   <!-- Scrollable Container -->
   <div class="table-container">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
@@ -113,6 +117,11 @@
 </div>
 <!-- Rent Card (Mobile) -->
 <div class="rent-cards" *ngIf="isMobileView">
+  <div class="col-xs-12 d-flex justify-content-between align-items-center m-3">
+    <button mat-icon-button color="primary" class="float-end" (click)="downloadExcel()">
+      <mat-icon>download</mat-icon>
+    </button>
+  </div>
   <div class="rent-card" *ngFor="let rent of rents">
     <strong>{{ rent.renterName }}</strong>
     <p>📞 {{ rent.phone }}</p>
